Refactor better table Ids, Transactions front end
