# lambda/src/main/java/michaelpotocar/projectkitty/dynamodb/model/Account.java
@@ -6,10 +6,11 @@ import com.amazonaws.services.dynamodbv2.datamodeling.*;
         tableName = "Accounts"
 )
 public class Account {
+    private Long customerId;
+    private String accountId;
     private Long accountNumber;
     private Long routingNumber;
     private Double balance;
-    private Long customerId;
     private String nickname;
     private String type;
     private Double creditLimit;
@@ -17,82 +18,65 @@ public class Account {
     public Account() {
     }
 
-    public Account(Long accountNumber, Long routingNumber) {
-        this.setAccountNumber(accountNumber);
-        this.setRoutingNumber(routingNumber);
+    public Account(Long customerId, String accountId) {
+        this.setCustomerId(customerId);
+        this.setAccountId(accountId);
     }
 
-    @DynamoDBHashKey(
-            attributeName = "accountNumber"
-    )
-    public Long getAccountNumber() {
-        return this.accountNumber;
+    @DynamoDBHashKey(attributeName = "customerId")
+    public Long getCustomerId() {
+        return this.customerId;
+    }
+    public void setCustomerId(Long customerId) {this.customerId = customerId;}
+
+    @DynamoDBRangeKey(attributeName = "accountId")
+    public String getAccountId() {
+        return this.accountId;
+    }
+    public void setAccountId(String accountId) {
+        this.accountId = accountId;
     }
 
-    public void setAccountNumber(Long accountNumber) {
-        this.accountNumber = accountNumber;
-    }
+    @DynamoDBAttribute(attributeName = "accountNumber")
+    public Long getAccountNumber() {return accountNumber;}
+    public void setAccountNumber(Long accountNumber) {this.accountNumber = accountNumber;}
 
-    @DynamoDBRangeKey(
-            attributeName = "routingNumber"
-    )
+    @DynamoDBAttribute(attributeName = "routingNumber")
     public Long getRoutingNumber() {
         return this.routingNumber;
     }
-
     public void setRoutingNumber(Long routingNumber) {
         this.routingNumber = routingNumber;
     }
 
-    @DynamoDBAttribute(
-            attributeName = "balance"
-    )
+    @DynamoDBAttribute(attributeName = "balance")
     public Double getBalance() {
         return this.balance;
     }
-
     public void setBalance(Double balance) {
         this.balance = balance;
     }
 
-    @DynamoDBIndexHashKey(globalSecondaryIndexNames = "CustomerId", attributeName = "customerId")
-    public Long getCustomerId() {
-        return this.customerId;
-    }
-
-    public void setCustomerId(Long customerId) {
-        this.customerId = customerId;
-    }
-
-    @DynamoDBAttribute(
-            attributeName = "nickname"
-    )
+    @DynamoDBAttribute(attributeName = "nickname")
     public String getNickname() {
         return this.nickname;
     }
-
     public void setNickname(String nickname) {
         this.nickname = nickname;
     }
 
-    @DynamoDBAttribute(
-            attributeName = "type"
-    )
+    @DynamoDBAttribute(attributeName = "type")
     public String getType() {
         return this.type;
     }
-
     public void setType(String type) {
         this.type = type;
     }
 
-    @DynamoDBAttribute(
-            attributeName = "creditLimit"
-    )
+    @DynamoDBAttribute(attributeName = "creditLimit")
     public Double getCreditLimit() {
         return this.creditLimit;
     }
-
     public void setCreditLimit(Double creditLimit) {
         this.creditLimit = creditLimit;
     }
