# lambda/src/main/java/michaelpotocar/projectkitty/dynamodb/model/Transaction.java
@@ -5,70 +5,51 @@ import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBRangeKey;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;
 
-@DynamoDBTable(
-        tableName = "Transactions"
-)
+@DynamoDBTable(tableName = "Transactions")
 public class Transaction {
-    private Long accountNumber;
+    private String accountId;
     private Long submittedDateTime;
     private Double amount;
     private Long completedDateTime;
     private String memo;
 
-    public Transaction() {
-    }
+    public Transaction() {}
 
-    @DynamoDBHashKey(
-            attributeName = "accountNumber"
-    )
-    public Long getAccountNumber() {
-        return this.accountNumber;
+    @DynamoDBHashKey(attributeName = "accountId")
+    public String getAccountId() {
+        return this.accountId;
     }
+    public void setAccountId(String accountId) {this.accountId = accountId;}
 
-    public void setAccountNumber(Long accountNumber) {
-        this.accountNumber = accountNumber;
-    }
-
-    @DynamoDBRangeKey(
-            attributeName = "submittedDateTime"
-    )
+    @DynamoDBRangeKey(attributeName = "submittedDateTime")
     public Long getSubmittedDateTime() {
         return this.submittedDateTime;
     }
-
     public void setSubmittedDateTime(Long submittedDateTime) {
         this.submittedDateTime = submittedDateTime;
     }
 
-    @DynamoDBAttribute(
-            attributeName = "amount"
-    )
+    @DynamoDBAttribute(attributeName = "amount")
     public Double getAmount() {
         return this.amount;
     }
-
     public void setAmount(Double amount) {
         this.amount = amount;
     }
 
-    @DynamoDBAttribute(
-            attributeName = "completedDateTime"
+    @DynamoDBAttribute(attributeName = "completedDateTime"
     )
     public Long getCompletedDateTime() {
         return this.completedDateTime;
     }
-
     public void setCompletedDateTime(Long completedDateTime) {
         this.completedDateTime = completedDateTime;
     }
 
-    @DynamoDBAttribute(
-            attributeName = "memo"
-    )
+    @DynamoDBAttribute(attributeName = "memo")
     public String getMemo() {
         return this.memo;
     }
-
     public void setMemo(String memo) {
         this.memo = memo;
     }
